# k8schema

./: README.md  pyproject.toml
k8schema/: __init__.py
